Hear iam add some actions with swagger Like[Put,Delete]
