# app/Http/Controllers/PostController.php
@@ -19,7 +19,7 @@ class PostController extends Controller
 /**
      * @OA\Get(
      *      path="/api/user/posts",
-     *      
+     *      operationId="userPosts",
      *      tags={"Posts"},
      *      summary="Posts User System",
      *      description="Posts In User System",
@@ -79,6 +79,55 @@ class PostController extends Controller
     /*
     * This Method To Add Posts 
     */
+
+/**
+     * @OA\Post(
+     *      path="/api/user/add-post",
+     *      operationId="add Posts",
+     *      tags={"Posts"},
+     *      summary="Add Post",
+     *      description="Add Posts In User System",
+     *      security={
+     *         {"bearer": {}}
+     *     },
+     * @OA\RequestBody(
+     *      required=true,
+     *      @OA\MediaType(mediaType="multipart/form-data",
+     *        @OA\Schema(
+     *            required={"title","content"},
+     *            @OA\Property(
+     *               property="title",
+     *               type="string",
+     *               description="you must add Title To Post"
+     *             ),
+     *             @OA\Property(
+     *                property="content",
+     *                type="string",
+     *                description="you must add Content To Post"
+     *             ),    
+     *         )
+     *      )
+     *  ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+*/
+
+
     public function store(Request $request)
     {
         //Check If Fileds Is not Empty
@@ -98,7 +147,7 @@ class PostController extends Controller
                 'status'=>false,
                 'msg'=>'Errorr',
                 'errors'=>$errors
-            ]);
+            ],404);
         }
         // If There IS No Errors Will Add The Post
         Post::insert([
@@ -110,7 +159,7 @@ class PostController extends Controller
         return response()->json([
             'status'=>true,
             'msg'=>'Insert Done'
-        ]);
+        ],200);
 
 
     }
@@ -120,6 +169,54 @@ class PostController extends Controller
     * ['For Admin'] He Can Update All Posts
     * ['For User'] He Can Update His Posts Only
     */
+
+    /**
+     * @OA\Put(
+     *      path="/api/user/edit-post/{id}",
+     *      operationId="Edit Posts",
+     *      tags={"Posts"},
+     *      summary="Edit Post",
+     *      description="Edit Posts In User System",
+     *      security={
+     *         {"bearer": {}}
+     *     },
+     * 
+     *@OA\Parameter(
+     *          name="id",
+     *          description="Post id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Edit Pots ",
+      *    @OA\JsonContent(
+     *       required={"title","content"},
+     *       @OA\Property(property="title", type="string", format="title", example="This Is Post title"),
+     *       @OA\Property(property="content", type="string", format="content", example="this is post content"),
+     *    ),
+     * ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+*/
     public function update(Request $request, $id)
     {
         // Valedation
@@ -138,7 +235,7 @@ class PostController extends Controller
                 'status'=>false,
                 'msg'=>'Errorr',
                 'errors'=>$errors
-            ]);
+            ],422);
         }
         // Update
             if (Gate::allows('is-Admin')) { // If This Is Admin Will Update Any Post
@@ -150,12 +247,12 @@ class PostController extends Controller
                     return response()->json([
                     'status'=>false,
                     'msg'=>'There Is no Post To Edit'
-                ]);
+                    ],404);
                 }
                 return response()->json([
                     'status'=>true,
                     'msg'=>'Updated Done By Admin'
-                ]);
+                ],200);
             }else{ // If This Is User Will Update His Post Only
                 $update = Post::where([['id',$request->id],['user_id',Auth::id()]])->update([
                     'title' => $request->title,
@@ -165,12 +262,12 @@ class PostController extends Controller
                     return response()->json([
                     'status'=>false,
                     'msg'=>'You Don\' Have Access to Edit this Post'
-                ]);
+                    ],404);
                 }
                 return response()->json([
                     'status'=>true,
                     'msg'=>'Updated Done'
-                ]);
+                ],200);
             }
         
     }
@@ -180,6 +277,44 @@ class PostController extends Controller
     * ['For Admin'] He Can Delete All Posts
     * ['For User'] He Can Delete His Posts Only
     */
+        /**
+     * @OA\Delete(
+     *      path="/api/user/delete-post/{id}",
+     *      operationId="Delete Posts",
+     *      tags={"Posts"},
+     *      summary="Delete Post",
+     *      description="Edit Posts In User System",
+     *      security={
+     *         {"bearer": {}}
+     *     },
+     * 
+     *@OA\Parameter(
+     *          name="id",
+     *          description="Post id To Delete It",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+*/
     public function destroy($id)
     {
         if (Gate::allows('is-Admin') || Gate::allows('is-Moderator')) { //Check If This User Is Admin He Can Delete Any Post
@@ -188,24 +323,24 @@ class PostController extends Controller
                 return response()->json([
                 'status'=>false,
                 'msg'=>'There Is no Posts To Delete It'
-            ]);
+                ],404);
         }
         return response()->json([
             'status'=>true,
             'msg'=>'Deleted Done'
-        ]);
+        ],200);
         }else{ //Check If This User Is Not Admin He Can Delete His Post Only
             $delete = Post::where([['id',$id],['user_id',Auth::id()]])->delete();
             if($delete != 1){
                 return response()->json([
                 'status'=>false,
                 'msg'=>'You Don\' Have Access to Delete this Post'
-            ]);
+                ],404);
             }
             return response()->json([
                 'status'=>true,
                 'msg'=>'Deleted Done'
-            ]);
+            ],200);
         }
         
     }
